# german-learning

./: .gitignore  README.md  conf.py  index.md  instructions.md  nebensaetze.md  pyproject.toml  tasks.py
.github/workflows/: deploy-docs.yml
a2/: index.md
a2/concepts/: index.md  indirect-questions.md  making-comparisons.md  polite-requests-wishes-advice.md
a2/grammar/: adjektiven.md  index.md  konjunktiv-ii.md  konnektoren.md  nebensaetze.md  nomen-und-artikel.md  outline.yml  praeposition.md  praeteritum.md  pronomen.md  relativsaetze.md  verben-mit-praepositionen.md  verben.md  w-fragen-mit-praeposition.md  werden.md
a2/topics/: index.md
b1/: index.md
b1/concepts/: expressing-consequences.md  expressing-opinions.md  expressing-reasons.md  goals-intention-purpose.md  index.md  order-of-events-past.md  unreal-conditionals.md
b1/grammar/: comparative-and-superlative.md  connector-words.md  futur-i.md  genitiv.md  grammatical-categories.md  indefinitwoerter-verneinen.md  index.md  indirekt-rede.md  konjunktiv-ii.md  lassen.md  n-deklination.md  nebensaetze.md  nominalisierung.md  passiv.md  plusquamperfekt.md  praeteritum.md  sentence-building.md  subordinate-clauses.md  zweiteilige-konnektoren.md  zweiteillige_konnektoren.md
b1/topics/: index.md
b2/concepts/: expressing-opinions.md  index.md  making-and-accepting-suggestion.md
b2/grammar/: das-wort-es.md  emphasis.md  indefinitpronomen.md  index.md  negating-a-sentence.md  nomen-verb-verbindungen.md  outline.yml  partizip-i-ii-als-adjektiv.md  passiv.md  (+7 more)
docs/: conf.py  index.md  terminology.md
(+200 files in other folders)
